--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Massively by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Logan's</title>
@@ -21,7 +17,7 @@
 					<div id="intro">
 						<h1>Logan Oram's<br />
 						Portfolio</h1>
-						<p>Data Analyist skilled in SQL, PowerBI, Python <a href="https://www.linkedin.com/in/logan-oram/">@LoganOram</a>
+						<p>Software Engineer/Data Analyist skilled in SQL, PowerBI, Excel, Altair, Python, C++, Java</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -36,6 +32,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Projects</a></li>
+							<li><a href="images/Logan's Resume.pdf" target="_blank">Resume</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/logan-oram/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
@@ -49,13 +46,13 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="#">Data Cleaning in SQL<br />
+									<h2><a href="https://github.com/OramLogan/Data-Cleaning">Data Cleaning in SQL<br />
 									</a></h2>
-									<p>In this project we clean housing data in SQL server</p>
+									<p>In this project I cleaned global layoff data in MySQL preparing it for EDA</p>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="https://github.com/OramLogan/Data-Cleaning" class="image main"><img src="images/global_layoffs2.jpeg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">View Project</a></li>
+									<li><a href="https://github.com/OramLogan/Data-Cleaning" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
