--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="https://github.com/OramLogan/Data-Cleaning">Data Cleaning in SQL<br />
+									<h2><a href="https://github.com/OramLogan/Data-Cleaning">Data Cleaning/EDA in SQL<br />
 									</a></h2>
-									<p>In this project I cleaned global layoff data in MySQL preparing it for EDA</p>
+									<p>In this project I cleaned and analyzed global layoff data in MySQL</p>
 								</header>
 								<a href="https://github.com/OramLogan/Data-Cleaning" class="image main"><img src="images/global_layoffs2.jpeg" alt="" /></a>
 								<ul class="actions special">
