--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="#">Data Exploration in SQL<br />
+										<h2><a href="https://www.datascienceportfol.io/loganoram3">PowerBI/Excel Projects<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Data exploration of COVID-19 dataset in SQL Server</p>
+									<a href="https://www.datascienceportfol.io/loganoram3" class="image fit"><img src="images/Excel:PowerBI.jpeg" alt="" /></a>
+									<p>Data cleaning and visulization projects in Microsoft</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="https://www.datascienceportfol.io/loganoram3" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
