--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 								<header class="major">
 									<h2><a href="https://github.com/OramLogan/Data-Cleaning">Data Cleaning/EDA in SQL<br />
 									</a></h2>
-									<p>In this project I cleaned and analyzed global layoff data in MySQL</p>
+									<p>Cleaned And Analyzed Global Layoff Aata In MySQL</p>
 								</header>
 								<a href="https://github.com/OramLogan/Data-Cleaning" class="image main"><img src="images/global_layoffs2.jpeg" alt="" /></a>
 								<ul class="actions special">
@@ -64,20 +64,20 @@
 										</a></h2>
 									</header>
 									<a href="https://www.datascienceportfol.io/loganoram3" class="image fit"><img src="images/Excel:PowerBI.jpeg" alt="" /></a>
-									<p>Data cleaning and visulization projects in Microsoft</p>
+									<p>Data Cleaning And Visulization Projects In Microsoft</p>
 									<ul class="actions special">
 										<li><a href="https://www.datascienceportfol.io/loganoram3" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Tableau Projects<br />
+										<h2><a href="https://github.com/OramLogan/BuffGames">Buff Games<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Tableau Projects Dashboards</p>
+									<a href="https://github.com/OramLogan/BuffGames" class="image fit"><img src="images/BuffGamesLogo (1).png" alt="" /></a>
+									<p>Online Minigame Platform</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Projects</a></li>
+										<li><a href="https://github.com/OramLogan/BuffGames" class="button">View Projects</a></li>
 									</ul>
 								</article>
 							</section>
