--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 								<header class="major">
 									<h2><a href="https://github.com/OramLogan/Data-Cleaning">Data Cleaning/EDA in SQL<br />
 									</a></h2>
-									<p>Cleaned And Analyzed Global Layoff Aata In MySQL</p>
+									<p>Cleaned And Analyzed Global Layoff Data In MySQL</p>
 								</header>
 								<a href="https://github.com/OramLogan/Data-Cleaning" class="image main"><img src="images/global_layoffs2.jpeg" alt="" /></a>
 								<ul class="actions special">
