--- a/index.html
+++ b/index.html
@@ -77,7 +77,18 @@
 									<a href="https://github.com/OramLogan/BuffGames" class="image fit"><img src="images/BuffGamesLogo (1).png" alt="" /></a>
 									<p>Online Minigame Platform</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/OramLogan/BuffGames" class="button">View Projects</a></li>
+										<li><a href="https://github.com/OramLogan/BuffGames" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2><a href="https://github.com/Evancholy1/tabler">Tabler<br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/Evancholy1/tabler" class="image fit"><img src="images/Screenshot 2025-09-01 at 7.18.15 PM.png" alt="" /></a>
+									<p>Online Restaurant Table Management Application</p>
+									<ul class="actions special">
+										<li><a href="https://tablr-nine.vercel.app/dashboard" class="button">View Project</a></li>
 									</ul>
 								</article>
 							</section>
