--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 					<div id="intro">
 						<h1>Logan Oram's<br />
 						Portfolio</h1>
-						<p>Software Engineer/Data Analyist skilled in SQL, PowerBI, Excel, Altair, Python, C++, Java</p>
+						<p>Software Engineer/Data Analyist skilled in PowerBI, Excel, C++, Java, Python, SQL, Altair</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -32,7 +32,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Projects</a></li>
-							<li><a href="images/Logan's Resume.pdf" target="_blank">Resume</a></li>
+							<li><a href="images/Oram Logan Resume.pdf" target="_blank">Resume</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/logan-oram/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
